--- a/src/css/global/global.css
+++ b/src/css/global/global.css
@@ -341,6 +341,7 @@ section.content {
   max-width: 400px;
 }
 
+.global-input-box select,
 .global-input-box input {
   font-family: inherit;
   width: 100%;
