--- a/src/css/pages/event/event-info.css
+++ b/src/css/pages/event/event-info.css
@@ -74,10 +74,39 @@
   padding: 15px;
   position: relative;
 }
+.invation-form .invation-box,
 .invation-form {
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
   column-gap: 20px;
   row-gap: 20px;
+}
+.invation-form .invation-box {
+  display: flex;
+}
+.invation-form .invation-box .header {
+  margin-bottom: 0;
+}
+
+.invation-form .guests-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.invation-form .action-box {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 20px;
+  margin-top: 20px;
+}
+.invation-form .action-box .button {
+  padding: 5px 8px;
+  border-radius: 12px;
+  width: fit-content;
+  cursor: pointer;
 }
