--- a/src/css/pages/home/style.css
+++ b/src/css/pages/home/style.css
@@ -16,3 +16,35 @@
   margin-top: 30px;
   width: 75px;
 }
+
+.filtr {
+  width: calc(100% - 30px);
+  padding: 15px;
+  display: flex;
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 70px;
+  overflow: hidden;
+  float: left;
+}
+
+.filtr .global-input-box {
+  padding: 0;
+}
+
+.section {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  float: left;
+}
+
+.section .chart-box {
+  width: 50%;
+  min-height: 200px;
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
